--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta charset="UTF-8"/>
-        <meta name="theme-color" content="#1bb566"/>
+        <meta name="theme-color" content="lightblue"/>
     <title>Exclusive Physics Tutorial </title>
     <link rel="stylesheet" href="/Physics-tutorial/phy.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -39,7 +39,7 @@
   <div class="nav-list" id="nav-list">
     <ul>
       <li><a href="article.html">Latest Articles</a></li>
-      <li><a href="/storage/emulated/0/images/Physics Quiz/index.html">Quiz</a></li>
+      <li><a href="/Physics-quiz/index.html">Quiz</a></li>
       <li><a href="https://philipmeliga.github.io/Calculator2">Scientific Calculator</a></li>
     </ul>
   </div>
